# iieg_dbt

./: 2025-12-sesion-tecnica-dbt-elt.ipynb  README.md  pyproject.toml
