[project]
name = "iieg-dbt"
version = "0.1.0"
description = "Example repo for a dbt pipeline for IIEG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.16",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.3",
    "lxml>=6.0.2",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
]
